--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <span class="quiz_option_text" id="quiz_option3_text">Option 3</span>
 
             <!-- QUIZ BACKGROUND FRAME -->
-            <div class="quiz_bg_frame"></div>
+            <div class="border_frame"></div>
 
             <!-- SCENARIO PROMPT -->
             <span class="quiz_prompt">
