--- a/index.html
+++ b/index.html
@@ -32,33 +32,111 @@
     <!-- ============================== -->
     <!-- QUIZ PAGE (HIDDEN AT START)   -->
     <!-- ============================== -->
-    <div id="quiz_page" style="display: none">
-      <div class="quiz_container">
-        <!-- IMAGE BOX -->
-        <div class="quiz_image_box"></div>
+    <div id="quiz_page_1" style="display: none">
+      <div class="quiz_centerer">
+        <div class="quiz_scale_wrapper">
+          <div class="quiz_container">
+            <!-- IMAGE BOX -->
+            <div class="quiz_image_box"></div>
 
-        <!-- SCENARIO PROMPT -->
-        <div class="quiz_prompt">
-          Scenario 1: You got scooped up by a knife and stood on a sock monkey
+            <!-- SCENARIO PROMPT -->
+            <div class="quiz_prompt">
+              Scenario 1: You got scooped up by a knife and stood on a sock
+              monkey
+            </div>
+            <div class="option_box">
+              <button
+                class="quiz_option"
+                data-points='{"introvert": 2, "extrovert": 0}'
+              >
+                Option 1
+              </button>
+              <button
+                class="quiz_option"
+                data-points='{"introvert": 0, "extrovert": 2}'
+              >
+                Option 2
+              </button>
+              <button
+                class="quiz_option"
+                data-points='{"introvert": 1, "extrovert": 1}'
+              >
+                Option 3
+              </button>
+            </div>
+          </div>
         </div>
-        <div class="option_box">
-          <button class="quiz_option">Option 1</button>
-          <button class="quiz_option">Option 2</button
-          ><button class="quiz_option">Option 3</button>
-        </div>
-        <!-- QUIZ BACKGROUND FRAME -->
-        <!-- <div class="border_frame"></div> -->
       </div>
     </div>
+
+    <div id="quiz_page_2" style="display: none">
+      <div class="quiz_centerer">
+        <div class="quiz_scale_wrapper">
+          <div class="quiz_container">
+            <!-- IMAGE BOX -->
+            <div class="quiz_image_box"></div>
+
+            <!-- SCENARIO PROMPT -->
+            <div class="quiz_prompt">
+              Scenario 2: You got scooped up by a knife and stood on a sock
+              monkey
+            </div>
+            <div class="option_box">
+              <button
+                class="quiz_option"
+                data-points='{"introvert": 2, "extrovert": 0}'
+              >
+                Option 1
+              </button>
+              <button
+                class="quiz_option"
+                data-points='{"introvert": 0, "extrovert": 2}'
+              >
+                Option 2
+              </button>
+              <button
+                class="quiz_option"
+                data-points='{"introvert": 1, "extrovert": 1}'
+              >
+                Option 3
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="quiz_page_3" style="display: none"></div>
 
     <!-- =============================== -->
     <!-- SCRIPT: SWITCH PAGES ON START   -->
     <!-- =============================== -->
     <script>
+      let quizScores = { introvert: 0, extrovert: 0 };
+      let currentPage = 0;
+
       document.getElementById("start_button_wrapper").onclick = function () {
+        currentPage += 1;
         document.getElementById("landing_page").style.display = "none";
-        document.getElementById("quiz_page").style.display = "block";
+        document.getElementById("quiz_page_" + currentPage).style.display =
+          "block";
       };
+
+      document.querySelectorAll(".quiz_option").forEach((btn) => {
+        btn.addEventListener("click", () => {
+          const scoreData = JSON.parse(btn.dataset.points);
+          for (const category in scoreData) {
+            quizScores[category] += scoreData[category];
+          }
+          currentPage += 1;
+          document.getElementById(
+            "quiz_page_" + (currentPage - 1)
+          ).style.display = "none";
+          document.getElementById("quiz_page_" + currentPage).style.display =
+            "block";
+          console.log("Scores:", quizScores);
+        });
+      });
     </script>
   </body>
 </html>
