more images and adjust brie scores

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- =============================== -->
     <div id="landing_page" class="page_container">
       <div class="title_box">
-        <span class="title_text">What’s Your Cheese?</span>
+        <span class="title_text">What's Your Cheese?</span>
       </div>
 
       <div id="start_button_wrapper">
@@ -441,7 +441,7 @@
       <div class="quiz_centerer">
         <div class="quiz_scale_wrapper">
           <div class="quiz_container">
-            <div class="quiz_image_box"></div>
+            <img src="images/12.png" class="quiz_image" />
             <div class="quiz_prompt">
               Scenario 12: You are lost in the sauce at the cheese factory
             </div>
@@ -476,19 +476,13 @@
       <div class="quiz_centerer">
         <div class="quiz_scale_wrapper">
           <div class="quiz_container">
-            <div class="quiz_image_box"></div>
+            <img src="images/13.png" class="quiz_image" />
             <div class="quiz_prompt">
               Scenario 13: Your friends are discussing the origins and purpose
               of cheese
             </div>
 
             <div class="option_box">
-              <button
-                class="quiz_option"
-                data-points='{"I": 0, "E": 0, "T": 3, "F": 0, "A": 0, "G": 0, "H": 0, "S": 0}'
-              >
-                Cheese is a social construct and we're all cooked
-              </button>
               <button
                 class="quiz_option"
                 data-points='{"I": 0, "E": 0, "T": 3, "F": 0, "A": 0, "G": 0, "H": 0, "S": 0}'
@@ -501,6 +495,12 @@
               >
                 Turn the discussion into a heated debate about the best cheese
                 instead
+              </button>
+              <button
+                class="quiz_option"
+                data-points='{"I": 0, "E": 0, "T": 3, "F": 0, "A": 0, "G": 0, "H": 0, "S": 0}'
+              >
+                Cheese is a social construct and we're all cooked
               </button>
             </div>
           </div>
@@ -530,7 +530,8 @@
                 class="quiz_option"
                 data-points='{"I": 0, "E": 0, "T": 0, "F": 3, "A": 0, "G": 0, "H": 0, "S": 0}'
               >
-                Wing it! You can definitely find your way around Wisconsin
+                Wing it! You can definitely find your way around Plymouth,
+                Wisconsin!
               </button>
               <button
                 class="quiz_option"
@@ -566,8 +567,7 @@
                 class="quiz_option"
                 data-points='{"I": 0, "E": 0, "T": 0, "F": 0, "A": 0, "G": 0, "H": 0, "S": 3}'
               >
-                Reflect on your journey from curds to cheese and accept your
-                fate
+                Reflect on your life from curds to cheese and accept your fate
               </button>
               <button
                 class="quiz_option"
@@ -587,7 +587,7 @@
       <div class="quiz_centerer">
         <div class="quiz_scale_wrapper">
           <div class="quiz_container">
-            <div class="quiz_image_box"></div>
+            <img src="images/16.png" class="quiz_image" />
             <div class="quiz_prompt">
               Scenario 16: You are added to a bowl of Buldak and you feel
               yourself slowly melting away
@@ -641,7 +641,7 @@
       };
 
       const cheeseProfiles = {
-        BRIE: { I: 3, E: 2, T: 2, F: 3, A: 3, G: 2, H: 1.5, S: 3.5 },
+        BRIE: { I: 2.5, E: 2, T: 2, F: 2.5, A: 2.5, G: 2, H: 1.5, S: 3.5 },
         MOZZ: { I: 1, E: 4, T: 1.5, F: 3.5, A: 2.5, G: 2.5, H: 3.5, S: 1.5 },
         BLUE: { I: 3.5, E: 1.5, T: 3.5, F: 1.5, A: 1.5, G: 3.5, H: 2, S: 3 },
         AMERICAN: { I: 2, E: 3, T: 1.5, F: 3.5, A: 2.5, G: 2.5, H: 4, S: 1 },
