Updated the first and second scenario picture

--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
       <div class="quiz_centerer">
         <div class="quiz_scale_wrapper">
           <div class="quiz_container">
-            <div
-              class="quiz_image_box"
-              style="background-image: url(&quot;./images/scen1.png&quot;)"
-            ></div>
+            <img src="images/1.png" class="quiz_image" />
             <div class="quiz_prompt">
               Scenario 1: You got scooped up by a knife and stood on a sock
               monkey
@@ -81,10 +78,7 @@
       <div class="quiz_centerer">
         <div class="quiz_scale_wrapper">
           <div class="quiz_container">
-            <div
-              class="quiz_image_box"
-              style="background-image: url(&quot;./images/scen2.png&quot;)"
-            ></div>
+            <img src="images/2.png" class="quiz_image" />
             <div class="quiz_prompt">
               Scenario 2: A raccoon stole your cheese and challenged you to a
               dance battle
