Cult and Therapist Images yayy

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <div class="quiz_centerer">
         <div class="quiz_scale_wrapper">
           <div class="quiz_container">
-            <div class="quiz_image_box"></div>
+            <img src="images/9.png" class="quiz_image" />
             <div class="quiz_prompt">
               Scenario 9: A cheese cult tried to recruit you
             </div>
