--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
       <div class="quiz_centerer">
         <div class="quiz_scale_wrapper">
           <div class="quiz_container">
-            <div class="quiz_image_box"></div>
+            <img src="images/14.png" class="quiz_image" />
             <div class="quiz_prompt">
               Scenario 14: You won a trip to Plymouth, Wisconsin
             </div>
