--- a/index.html
+++ b/index.html
@@ -15,26 +15,33 @@
     <!-- =============================== -->
     <!-- LANDING PAGE -->
     <!-- =============================== -->
-    <div id="landing_page" class="page_container">
-      <div class="title_box">
-        <span class="title_text">What's Your Cheese?</span>
-      </div>
+    <div id="landing_page">
+      <div class="quiz_centerer">
+        <div class="quiz_scale_wrapper">
+          <div class="quiz_container">
 
-      <div id="start_button_wrapper">
-        <div class="start_button_bg"></div>
-        <span class="start_button_text">Start</span>
-      </div>
+            <div class="title_box">
+              <span class="title_text">What's Your Cheese?</span>
+            </div>
 
-      <div class="border_frame"></div>
-      <div class="title_cheese"></div>
-      <div class="title_lil_shan_rats"></div>
+            <div id="start_button_wrapper">
+              <div class="start_button_bg"></div>
+              <span class="start_button_text">Start</span>
+            </div>
+
+            <div class="border_frame"></div>
+            <div class="title_lil"></div>
+            <div class="title_shan"></div>
+
+          </div>
+        </div>
+      </div>
     </div>
 
-    <!-- =================================================== -->
-    <!-- QUIZ PAGES 1–10 (Your layout repeated exactly) -->
-    <!-- =================================================== -->
 
-    <!-- TEMPLATE (copied 10 times with only scenario changed) -->
+    <!-- =================================================== -->
+    <!-- QUIZ PAGES 1–10 -->
+    <!-- =================================================== -->
 
     <!-- PAGE 1 -->
     <div id="quiz_page_1" style="display: none">
