--- a/index.html
+++ b/index.html
@@ -36,6 +36,37 @@
       </div>
     </div>
 
+    <!-- =============================== -->
+    <!-- NAME PAGE -->
+    <!-- =============================== -->
+    <div id="name_page" style="display: none">
+      <div class="quiz_centerer">
+        <div class="quiz_scale_wrapper">
+          <div class="quiz_container name_container">
+
+            <div class="quiz_prompt">
+              What should we call you?
+            </div>
+
+            <input
+              id="name_input"
+              class="name_input"
+              type="text"
+              placeholder="Enter your name"
+            />
+
+            <div id="name_continue" class="name_continue">
+              <div class="start_button_bg"></div>
+              <span class="start_button_text">Continue</span>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
     <!-- =================================================== -->
     <!-- QUIZ PAGES 1–10 -->
     <!-- =================================================== -->
@@ -663,7 +694,7 @@
       const cheeseProfiles = {
         BRIE: { I: 2.5, E: 2, T: 2, F: 2.5, A: 2.5, G: 2, H: 1.5, S: 3.5 },
         MOZZ: { I: 1, E: 4, T: 1.5, F: 3.5, A: 2.5, G: 2.5, H: 3.5, S: 1.5 },
-        BLUE: { I: 3.5, E: 1.5, T: 3, F: 2, A: 1.5, G: 3.5, H: 2, S: 3 },
+        BLUE: { I: 3.5, E: 1.5, T: 3.5, F: 1.5, A: 1.5, G: 3.5, H: 2, S: 3 },
         AMERICAN: { I: 2, E: 3, T: 1.5, F: 3.5, A: 2.5, G: 2.5, H: 4, S: 1 },
         COTTAGE: { I: 4, E: 1, T: 2, F: 3, A: 2.5, G: 2.5, H: 4, S: 1 },
         GOAT: { I: 3.5, E: 1.5, T: 3, F: 2, A: 3, G: 2, H: 3.5, S: 1.5 },
@@ -671,7 +702,7 @@
         MASCARPONE: { I: 1.5, E: 3.5, T: 3.5, F: 1.5, A: 1, G: 4, H: 3, S: 2 },
         RICOTTA: { I: 2, E: 3, T: 1, F: 4, A: 4, G: 1, H: 1.5, S: 3.5 },
         MANCHEGO: { I: 2, E: 3, T: 2, F: 3, A: 2, G: 3, H: 2, S: 3 },
-        GOUDA: { I: 1.5, E: 3.5, T: 3, F: 2, A: 3.5, G: 1.5, H: 3.5, S: 1.5 },
+        GOUDA: { I: 1.5, E: 3.5, T: 3, F: 1, A: 3.5, G: 1.5, H: 3.5, S: 1.5 },
         CHEDDAR: { I: 1, E: 4, T: 1, F: 4, A: 1.5, G: 3.5, H: 3.5, S: 1.5 },
       };
 
