--- a/index.html
+++ b/index.html
@@ -673,110 +673,6 @@
     <!-- =============================== -->
     <!-- SCRIPT -->
     <!-- =============================== -->
-    <script>
-      let quizScores = { I: 0, E: 0, T: 0, F: 0, A: 0, G: 0, H: 0, S: 0 };
-      let currentPage = 0;
-      const Cheeses = {
-        BRIE: "Brie",
-        MOZZ: "Mozzarella",
-        BLUE: "Blue Cheese",
-        AMERICAN: "American",
-        COTTAGE: "Cottage Cheese",
-        GOAT: "Goat Cheese",
-        FETA: "Feta",
-        MASCARPONE: "Mascarpone",
-        RICOTTA: "Ricotta",
-        MANCHEGO: "Manchego",
-        GOUDA: "Gouda",
-        CHEDDAR: "Cheddar",
-      };
-
-      const cheeseProfiles = {
-        BRIE: { I: 2.5, E: 2, T: 2, F: 2.5, A: 2.5, G: 2, H: 1.5, S: 3.5 },
-        MOZZ: { I: 1, E: 4, T: 1.5, F: 3.5, A: 2.5, G: 2.5, H: 3.5, S: 1.5 },
-        BLUE: { I: 3.5, E: 1.5, T: 3.5, F: 1.5, A: 1.5, G: 3.5, H: 2, S: 3 },
-        AMERICAN: { I: 2, E: 3, T: 1.5, F: 3.5, A: 2.5, G: 2.5, H: 4, S: 1 },
-        COTTAGE: { I: 4, E: 1, T: 2, F: 3, A: 2.5, G: 2.5, H: 4, S: 1 },
-        GOAT: { I: 3.5, E: 1.5, T: 3, F: 2, A: 3, G: 2, H: 3.5, S: 1.5 },
-        FETA: { I: 4, E: 1, T: 4, F: 1, A: 2.5, G: 2.5, H: 1, S: 4 },
-        MASCARPONE: { I: 1.5, E: 3.5, T: 3.5, F: 1.5, A: 1, G: 4, H: 3, S: 2 },
-        RICOTTA: { I: 2, E: 3, T: 1, F: 4, A: 4, G: 1, H: 1.5, S: 3.5 },
-        MANCHEGO: { I: 2, E: 3, T: 2, F: 3, A: 2, G: 3, H: 2, S: 3 },
-        GOUDA: { I: 1.5, E: 3.5, T: 3, F: 1, A: 3.5, G: 1.5, H: 3.5, S: 1.5 },
-        CHEDDAR: { I: 1, E: 4, T: 1, F: 4, A: 1.5, G: 3.5, H: 3.5, S: 1.5 },
-      };
-
-      function cheeseResult(score) {
-        let bestCheese = null;
-        let bestMatch = -Infinity;
-
-        const scoreMagnitude = Math.sqrt(
-          Object.values(score).reduce((s, v) => s + v * v, 0)
-        );
-
-        for (const cheeseKey in cheeseProfiles) {
-          const profile = cheeseProfiles[cheeseKey];
-
-          let dot = 0;
-          let profileMagnitude = 0;
-
-          for (const trait in score) {
-            dot += score[trait] * profile[trait];
-            profileMagnitude += profile[trait] * profile[trait];
-          }
-
-          const similarity =
-            dot / (scoreMagnitude * Math.sqrt(profileMagnitude));
-
-          if (similarity > bestMatch) {
-            bestMatch = similarity;
-            bestCheese = Cheeses[cheeseKey];
-          }
-        }
-
-        return bestCheese;
-      }
-
-      document.getElementById("start_button_wrapper").onclick = function () {
-        currentPage = 1;
-        document.getElementById("landing_page").style.display = "none";
-        document.getElementById("quiz_page_1").style.display = "block";
-      };
-
-      document.querySelectorAll(".quiz_option").forEach((btn) => {
-        btn.addEventListener("click", () => {
-          const pts = JSON.parse(btn.dataset.points);
-          for (const key in pts) quizScores[key] += pts[key];
-
-          const prev = currentPage;
-          currentPage++;
-
-          document.getElementById("quiz_page_" + prev).style.display = "none";
-
-          if (currentPage <= 16) {
-            document.getElementById("quiz_page_" + currentPage).style.display =
-              "block";
-          } else {
-            document.getElementById("loading").style.display = "block";
-
-            setTimeout(() => {
-              document.getElementById("loading").style.display = "none";
-              document.getElementById("result").style.display = "block";
-              const resultCheese = cheeseResult(quizScores);
-              const img = document.getElementById("result_image");
-              img.src = "images/" + resultCheese + ".png";
-              img.alt = resultCheese;
-            }, 3000);
-
-            // alert(
-            //   "Quiz complete! Results: " +
-            //     JSON.stringify(quizScores) +
-            //     "You are: " +
-            //     cheeseResult(quizScores)
-            // );
-          }
-        });
-      });
-    </script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
