share and download

--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
       <div class="quiz_centerer">
         <div class="quiz_scale_wrapper">
           <div class="quiz_container name_container">
-
-            <div class="quiz_prompt">
-              What should we call you?
-            </div>
+            <div class="quiz_prompt">What should we call you?</div>
 
             <input
               id="name_input"
@@ -57,15 +54,12 @@
 
             <div id="name_continue" class="name_continue">
               <div class="start_button_bg"></div>
-              <span class="start_button_text">Continue</span>
+              <span class="continue_button_text">Continue</span>
             </div>
-
           </div>
         </div>
       </div>
     </div>
-
-
 
     <!-- =================================================== -->
     <!-- QUIZ PAGES 1–10 -->
@@ -665,6 +659,10 @@
         <div class="quiz_scale_wrapper">
           <div class="result_container">
             <img id="result_image" class="result_image" />
+            <div class="result_buttons">
+              <button id="download_button">Save Image</button>
+              <button id="share_button">Share</button>
+            </div>
           </div>
         </div>
       </div>
