all cheeses page

--- a/index.html
+++ b/index.html
@@ -660,9 +660,61 @@
           <div class="result_container">
             <img id="result_image" class="result_image" />
             <div class="result_buttons">
+              <button id="all_cheeses_button">View Cheeses</button>
               <button id="download_button">Save Image</button>
               <button id="share_button">Share</button>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ALL CHEESES -->
+    <div id="all_cheeses" style="display: none">
+      <div class="quiz_centerer">
+        <div class="quiz_scale_wrapper">
+          <div class="result_container">
+            <button id="back_button" class="back_button">Back</button>
+            <img src="images/Brie.png" alt="Brie" class="result_image" />
+            <img
+              src="images/Mozzarella.png"
+              alt="Mozzarella"
+              class="result_image"
+            />
+            <img
+              src="images/Blue Cheese.png"
+              alt="Blue Cheese"
+              class="result_image"
+            />
+            <img
+              src="images/American.png"
+              alt="American"
+              class="result_image"
+            />
+            <img
+              src="images/Cottage Cheese.png"
+              alt="Cottage Cheese"
+              class="result_image"
+            />
+            <img
+              src="images/Goat Cheese.png"
+              alt="Goat Cheese"
+              class="result_image"
+            />
+            <img src="images/Feta.png" alt="Feta" class="result_image" />
+            <img
+              src="images/Mascarpone.png"
+              alt="Mascarpone"
+              class="result_image"
+            />
+            <img src="images/Ricotta.png" alt="Ricotta" class="result_image" />
+            <img
+              src="images/Manchego.png"
+              alt="Manchego"
+              class="result_image"
+            />
+            <img src="images/Gouda.png" alt="Gouda" class="result_image" />
+            <img src="images/Cheddar.png" alt="Cheddar" class="result_image" />
           </div>
         </div>
       </div>
