--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
               <span class="start_button_text">Start</span>
             </div>
             <div class="disclaimer_text">
-              Made for entertainment purposes only!
+              Made purely for CURDiosity by Shannon and Lillian!<br>
+              Take these results with a pinch of parmesan!
             </div>
             <div class="title_lil"></div>
             <div class="title_shan"></div>
@@ -660,6 +661,7 @@
           <div class="result_container">
             <img id="result_image" class="result_image" />
             <div class="result_buttons">
+              <button id="recipe_button">View My Special Recipe</button>
               <button id="all_cheeses_button">View Cheeses</button>
               <button id="download_button">Save Image</button>
               <button id="share_button">Share</button>
